# decompilador

./: .gitignore  README.md
dev_docs/: Hantek_2D72_2D42_Manual.txt  INDICE.md  PENDIENTES_Y_PLAN_MANUAL_COMPLETO.md  README.md
dev_scripts/: decompile_firmware.sh  decompile_hantek.sh  (+9 more)
pyhantek/: README.md  ch_volt_map_empirico.json  hantek_cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  time_div_labels.json  time_div_map_empirico.json  trig_slope_labels.json  yt_format_labels.json
pyhantek/captures/: COMPARACION_invert_CH1.txt  estado_read_settings_20260325T223927Z_ch1_no_invertido.txt  estado_read_settings_20260325T224011Z_ch1_invertido.txt  force_trig_A_antes.json
pyhantek/docs/notebooks/: visualizar_captura.ipynb
pyhantek/hantek_usb/: __main__.py  cli.py  constants.py  dds_scope_helpers.py  dmm_decode.py  dmm_firmware_map.py  fpga_script.py  osc_decode.py  parse_resp.py  protocol.py  run_external_ch1_smoke.py  scope_signal_metrics.py
pyhantek/pyhantek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyhantek/tests/: conftest.py  test_parse_and_protocol.py  test_scope_signal_metrics.py
pyhantek/tools/: capture_scope_after_autoset.py  compare_read_settings.py  compare_scope_snapshots.py  dds_osc_coherence.py  dds_osc_sweep.py  external_ch1_smoke.py  gen_arb1_waveform.py  plot_scope_ch1_compare.py  read_settings_payload_hex.py  scope_autoset_soft.py  scope_label_walk.py  scope_live_view.py  scope_options_probe.py  snapshot_scope_state.py  time_div_label_walk.py  verify_all_arb_slots.py  verify_arb_sine_scope.py
(+44 files in other folders)
